Add sponge, reknit README

--- a/README.Rmd
+++ b/README.Rmd
@@ -74,5 +74,11 @@ table_flex
 ![Figure S5](Figures/figures/Supplementary_Figure_S5.svg)
 **Supplementary Figure S5. The Blacklist Algorithm.**  A) **Binning parameters:** Two internal parameters, "binSize" and "binOverlap," define how bins are created. B) **Read sorting:** The start position of each read is sorted according to the read’s length and compared using the given pre-calculated mappability vector. C) **The “binsMap” vector:** This vector is generated using the "uniqueLength" threshold. D) **Normalization:** The signal ("Unique") and mappability ("Multi") vectors are divided, quantile normalized, and the median is taken per bin. E) **Region calling:** This step uses several predefined internal parameters/thresholds to call and annotate excludable regions.  
 
+### [hg38 sponge sequences](Sponge)
+
+[GRCh38_sponge.fa.gz](Sponge/GRCh38_sponge.fa.gz), 25Mb
+
+**Source:** Miga, Karen H., Christopher Eisenhart, and W. James Kent. "Utilizing mapping targets of sequences underrepresented in the reference assembly to reduce false positive alignments." Nucleic acids research (2015), https://doi.org/10.1093/nar/gkv671, [Supplementary Data](https://academic.oup.com/nar/article/43/20/e133/1398360#81910257)
+
 ### [Scripts](Scripts)
 A directory containing various scripts used to generate the data.
